src/objects/Trial__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rate_Sum__c</fullName>
        <label>Average Rate Sum</label>
        <summarizedField>Rate__c.Rating__c</summarizedField>
        <summaryForeignKey>Rate__c.Trial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Rates__c</fullName>
        <label>Count of Rates</label>
        <summaryForeignKey>Rate__c.Trial__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_point__c</fullName>
        <label>End point</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mountains__c</fullName>
        <label>Mountains</label>
        <referenceTo>Mountains__c</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_point__c</fullName>
        <label>Start point</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Trial_Level__c</fullName>
        <label>Trial Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
                <value>
                    <fullName>Level 7</fullName>
                </value>
                <value>
                    <fullName>Level 8</fullName>
                </value>
                <value>
                    <fullName>Level 9</fullName>
                </value>
                <value>
                    <fullName>Level 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trial</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>